--- a/.github/workflows/pytest-allure.yml
+++ b/.github/workflows/pytest-allure.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         suite:
           - tests/test_login.py
-          - tests/test_checkout.py
+          # - tests/test_checkout.py
 
     steps:
       - name: Checkout repository
