--- a/.github/workflows/pytest-allure.yml
+++ b/.github/workflows/pytest-allure.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         suite:
-          # - tests/test_login.py
+          - tests/test_login.py
           - tests/test_checkout.py
 
     steps:
