--- a/.github/workflows/pytest-allure.yml
+++ b/.github/workflows/pytest-allure.yml
@@ -44,5 +44,5 @@ jobs:
       - name: Upload Allure Results as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: allure-results-${{ matrix.suite }}
+          name: allure-results
           path: reports
