--- a/.github/workflows/pytest-allure.yml
+++ b/.github/workflows/pytest-allure.yml
@@ -88,14 +88,18 @@ jobs:
           echo "CHROME_BIN=$(which google-chrome)" >> $GITHUB_ENV
           echo "CHROMEDRIVER=$(which chromedriver)" >> $GITHUB_ENV
 
+      - name: Set artifact name
+        run: echo "ARTIFACT_NAME=$(basename '${{ matrix.suite }}' .py)" >> $GITHUB_ENV
+
       - name: Run Pytest and generate Allure results
         run: pytest ${{ matrix.suite }} --alluredir=reports
 
       - name: Upload Allure Results as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: allure-results-${{ matrix.suite }}
+          name: allure-results-${{ env.ARTIFACT_NAME }}
           path: reports
+
 
   generate-report:
     needs: test
