--- a/.github/workflows/pytest-allure.yml
+++ b/.github/workflows/pytest-allure.yml
@@ -101,30 +101,30 @@ jobs:
           path: reports
 
 
-  generate-report:
-    needs: test
-    runs-on: ubuntu-latest
+  # generate-report:
+  #   needs: test
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Download Allure results
-        uses: actions/download-artifact@v4
-        with:
-          path: combined-reports
+  #   steps:
+  #     - name: Download Allure results
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         path: combined-reports
 
-      - name: Install Allure
-        run: |
-          sudo apt-add-repository ppa:qameta/allure -y
-          sudo apt-get update
-          sudo apt-get install allure -y
+  #     - name: Install Allure
+  #       run: |
+  #         sudo apt-add-repository ppa:qameta/allure -y
+  #         sudo apt-get update
+  #         sudo apt-get install allure -y
 
-      - name: Combine and Generate Allure Report
-        run: |
-          mkdir merged-results
-          find combined-reports -type f -name '*.json' -exec cp {} merged-results/ \;
-          allure generate merged-results --clean -o allure-report
+  #     - name: Combine and Generate Allure Report
+  #       run: |
+  #         mkdir merged-results
+  #         find combined-reports -type f -name '*.json' -exec cp {} merged-results/ \;
+  #         allure generate merged-results --clean -o allure-report
 
-      - name: Upload Allure HTML Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-html-report
-          path: allure-report
+  #     - name: Upload Allure HTML Report
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: allure-html-report
+  #         path: allure-report
